@@ -1,3 +1,4 @@
+.gz
 .git
 blib
 ^Makefile$
