@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               Proc-Simple
-version:            1.28
+version:            1.29
 abstract:           ~
 author:  []
 license:            unknown
