@@ -1,36 +1,20 @@
 #!/usr/bin/perl -w
 
 use Proc::Simple;
+use Test::More;
 
-### Test the new multi arg methods
-$| = 1;
-
-print "1..4\n";
+plan tests => 4;
 
 $psh  = Proc::Simple->new();
 
-check($psh->start("sleep", "1"));      # 1
+ok($psh->start("sleep", "1"));      # 1
 while($psh->poll) { 
     sleep 1; }
-check(!$psh->poll());                  # 2 Must be dead
+ok(!$psh->poll());                  # 2 Must be dead
 
 sub mysleep { sleep(@_); }
 
-check($psh->start(\&mysleep, 1));      # 3
+ok($psh->start(\&mysleep, 1));      # 3
 while($psh->poll) {
     sleep 1; }
-check(!$psh->poll());                  # 4 Must have been terminated
-
-###
-### check(1) -> print #testno ok
-### check(O) -> print #testno not ok
-###
-sub check {
-    my ($yesno) = @_;
-
-    $nu = 1 unless defined $nu;
-    print($yesno ? "ok $nu\n" : "not ok $nu\n");
-    $nu++;
-}
-
-1;
+ok(!$psh->poll());                  # 4 Must have been terminated
