@@ -1,22 +1,8 @@
 #!/usr/bin/perl -w
 
 use Proc::Simple;
-
-###
-### check(1) -> print #testno ok
-### check(O) -> print #testno not ok
-###
-sub check {
-    my ($yesno) = @_;
-
-    $nu = 1 unless defined $nu;
-    print($yesno ? "ok $nu\n" : "not ok $nu\n");
-    $nu++;
-}
-
-$| = 1;
-
-print "1..80\n";
+use Test::More;
+plan tests => 80;
 
 ###
 ### Multiple Processes Test
@@ -28,17 +14,17 @@ foreach $i (0..19) {
 }
 
 foreach $i (@psh) {
-    check($i->start("sleep 60"));        # 1-20
+    ok($i->start("sleep 60"));        # 1-20
 }
 
 foreach $i (@psh) {
     while(!$i->poll) { 
         sleep 1; }
-    check($i->poll());                   # Check each process, kill it
-    check($i->kill());                   # and check again: 21-80
+    ok($i->poll());                   # Check each process, kill it
+    ok($i->kill());                   # and check again: 21-80
     while($i->poll) { 
         sleep 1; }
-    check(!$i->poll());                  
+    ok(!$i->poll());                  
 }
 
 Proc::Simple->cleanup();
